force-app/main/default/objects/Property_SalesAI_History__c/Property_SalesAI_History__c.object-meta.xml
<CustomObject>
    <label>Property Sales.AI History</label>
    <nameField>
        <label>Property Sales.AI History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties Sales.AI History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>