force-app/main/default/objects/Property_SalesAI_History__c/fields/Finish_Time__c.field-meta.xml
<CustomField>
    <fullName>Finish_Time__c</fullName>
    <label>Finish Time</label>
    <type>DateTime</type>
</CustomField>