force-app/main/default/objects/Property_SalesAI_History__c/fields/Lead_Errors__c.field-meta.xml
<CustomField>
    <fullName>Lead_Errors__c</fullName>
    <label>Lead Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>