force-app/main/default/objects/Property_SalesAI_History__c/fields/Opportunity_Errors__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Errors__c</fullName>
    <label>Opportunity Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>