force-app/main/default/objects/Property_SalesAI_History__c/fields/Property_SalesAI_Errors__c.field-meta.xml
<CustomField>
    <fullName>Property_SalesAI_Errors__c</fullName>
    <label>Property SalesAI Errors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>