force-app/main/default/objects/Property_SalesAI_History__c/fields/Rejected_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Opportunities__c</fullName>
    <label>Rejected Opportunities</label>
    <summaryFilterItems>
        <field>Property_SalesAI_Match__c.Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Property_SalesAI_Match__c.Type__c</field>
        <operation>equals</operation>
        <value>Opportunity Match</value>
    </summaryFilterItems>
    <summaryForeignKey>Property_SalesAI_Match__c.Property_SalesAI_History__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>