force-app/main/default/objects/Property_SalesAI_History__c/fields/Short_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Short_Error_Message__c</fullName>
    <label>Short Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>