force-app/main/default/objects/Property_SalesAI_History__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Finished Successfully</fullName>
            </value>
            <value>
                <fullName>Finished With Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>