force-app/main/default/objects/Property_SalesAI_History__c/fields/Unconfirmed_Leads__c.field-meta.xml
<CustomField>
    <fullName>Unconfirmed_Leads__c</fullName>
    <formula>Matched_Leads__c  - (Updated_Leads__c  + Rejected_Leads__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unconfirmed Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>