force-app/main/default/objects/Property_SalesAI_History__c/fields/Unconfirmed_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Unconfirmed_Opportunities__c</fullName>
    <formula>Matched_Opportunities__c - ( Rejected_Opportunities__c + Updated_Opportunities__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unconfirmed Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>