force-app/main/default/objects/Property_SalesAI_History__c/fields/Updated_Leads__c.field-meta.xml
<CustomField>
    <fullName>Updated_Leads__c</fullName>
    <label>Updated Leads</label>
    <summaryFilterItems>
        <field>Property_SalesAI_Match__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Property_SalesAI_Match__c.Type__c</field>
        <operation>equals</operation>
        <value>Lead Match</value>
    </summaryFilterItems>
    <summaryForeignKey>Property_SalesAI_Match__c.Property_SalesAI_History__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>