force-app/main/default/objects/Property_SalesAI_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Matched_Leads__c</columns>
    <columns>Matched_Opportunities__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Finish_Time__c</columns>
    <columns>Property_SalesAI_Errors__c</columns>
    <columns>Lead_Errors__c</columns>
    <columns>Opportunity_Errors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>